// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Field — composição completa > snapshot no estado inválido > estado-invalido 1`] = `
<div
  class="flex flex-col gap-1.5"
  data-invalid=""
  data-slot="field"
  data-touched=""
>
  <label
    class="text-sm font-medium text-foreground data-disabled:opacity-50"
    data-invalid=""
    data-slot="field-label"
    data-touched=""
    for="base-ui-_r_1b_"
    id="base-ui-_r_1c_"
  >
    Nome completo
  </label>
  <input
    aria-describedby="base-ui-_r_1e_ base-ui-_r_1f_"
    aria-invalid="true"
    aria-labelledby="base-ui-_r_1c_"
    class="flex h-9 w-full min-w-0 rounded-lg border border-muted-foreground bg-transparent px-3 py-1 text-sm text-foreground transition-colors outline-none placeholder:text-muted-foreground focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 disabled:pointer-events-none disabled:opacity-50"
    data-invalid=""
    data-slot="input"
    data-touched=""
    id="base-ui-_r_1b_"
    placeholder="Seu nome"
    required=""
  />
  <p
    class="text-sm text-muted-foreground"
    data-invalid=""
    data-slot="field-description"
    data-touched=""
    id="base-ui-_r_1e_"
  >
    Como consta no seu documento.
  </p>
  <div
    class="text-sm font-medium text-foreground"
    data-invalid=""
    data-slot="field-error"
    data-starting-style=""
    data-touched=""
    id="base-ui-_r_1f_"
  >
    Campo obrigatório.
  </div>
</div>
`;

exports[`Field — composição completa > snapshot no estado padrão > estado-padrao 1`] = `
<div
  class="flex flex-col gap-1.5"
  data-slot="field"
>
  <label
    class="text-sm font-medium text-foreground data-disabled:opacity-50"
    data-slot="field-label"
    for="base-ui-_r_16_"
    id="base-ui-_r_17_"
  >
    Nome completo
  </label>
  <input
    aria-describedby="base-ui-_r_19_"
    aria-labelledby="base-ui-_r_17_"
    class="flex h-9 w-full min-w-0 rounded-lg border border-muted-foreground bg-transparent px-3 py-1 text-sm text-foreground transition-colors outline-none placeholder:text-muted-foreground focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 disabled:pointer-events-none disabled:opacity-50"
    data-slot="input"
    id="base-ui-_r_16_"
    placeholder="Seu nome"
    required=""
  />
  <p
    class="text-sm text-muted-foreground"
    data-slot="field-description"
    id="base-ui-_r_19_"
  >
    Como consta no seu documento.
  </p>
</div>
`;
